<resources>
    <string name="app_name">App</string>
    <string name="title_home">Featured</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Apply</string>
    <string name="contact">Contact</string>
    <string name="forum_epfl">Forum EPFL</string>
    <string name="dashboard">Forum EPFL, Dashboard</string>
    <string name="companies">Companies</string>
    <string name="about">About</string>
    <string name="map">Map</string>

    <!-- -->
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered in Firebase now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="prompt_password"> input password</string>
    <string name="post_desc_hint">Write your post</string>
    <string name="post_next_part">Next</string>
    <string name="new_post_btn_hint">Post</string>

    <string name="setup_name_hint_text">Set username</string>
    <string name="setup_btn_name_text">setup</string>

    <!-- added with the search bar -->
    <string name="search_hint">Search</string>

    <!-- added with new post the second part -->
    <string name="post_title">Title</string>
    <string name="post_desc">Description</string>
    <string name="tags">Tags separated by spaces</string>
    <string name="post_location">Location</string>

    <!-- added with refinement of dashboard -->
    <string name="Settings">Settings</string>
    <string name="Messages">Messages</string>
    <string name="MyPosts">My Posts</string>
</resources>
